--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "bootstrap": "^4.6.0",
     "eslint-config-airbnb-typescript-prettier": "^4.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "~3.8.2"
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
