--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/seedrandom": "^3.0.0",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.19.0",
     "eslint-config-airbnb-typescript-prettier": "^4.2.0",
+    "faker": "^5.5.1",
+    "miragejs": "^0.1.41",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "seedrandom": "^3.0.5",
+    "txtgen": "^2.2.8",
     "typescript": "^4.2.3"
   },
   "scripts": {
