--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.2.5",
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/seedrandom": "^3.0.0",
     "bootstrap": "^4.6.0",
+    "classnames": "^2.2.6",
     "date-fns": "^2.19.0",
     "eslint-config-airbnb-typescript-prettier": "^4.2.0",
     "faker": "^5.5.1",
