--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reselect": "^4.0.0",
     "seedrandom": "^3.0.5",
     "txtgen": "^2.2.8",
     "typescript": "^4.2.3"
